syntax = "proto3";

package zorro_python;

enum LogLevels {
  DEBUG = 0;
  INFO = 1;
  WARNING = 2;
  ERROR = 3;
  CRITICAL = 4;
}

// Parameters for the log rpc
message LogParameters {
  // The message to log
  string message = 2;
  // The level of importance of the message
  LogLevels level = 3;
}

service PythonProcessor {
  // Simple log message
  rpc Log(LogParameters)
}
